force-app/main/default/objects/Region_POD__c/Region_POD__c.object-meta.xml
<CustomObject>
    <label>Region POD</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Region PODs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>