force-app/main/default/objects/Region_POD__c/fields/Skill_Type__c.field-meta.xml
<CustomField>
    <fullName>Skill_Type__c</fullName>
    <label>Skill Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Core</fullName>
            </value>
            <value>
                <fullName>Flex</fullName>
            </value>
            <value>
                <fullName>Training</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>