force-app/main/default/objects/Region_POD__c/fields/Team__c.field-meta.xml
<CustomField>
    <fullName>Team__c</fullName>
    <description>Flexible Workforce:- Team which is using the Region or POD</description>
    <label>Team</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Implementation Advocate</fullName>
            </value>
            <value>
                <fullName>Advisor</fullName>
            </value>
            <value>
                <fullName>Renewal Specialist</fullName>
            </value>
            <value>
                <fullName>Benefits Designer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>